<resources>
    <string name="app_name">滑步车</string>
    <string name="main_check_update_app_err">找不到版本号</string>

    <string name="login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_phone">请输入您的手机号</string>
    <string name="login_pwd">请输入您的密码</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_order">一其他登录方式一</string>

    <string name="register_phone">请输入您的手机号</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_code">请输入验证码</string>
    <string name="register_pwd">请输入1-16位登录密码</string>
    <string name="register_pwd_confirm">请再次输入密码</string>
    <string name="register_agree">我已阅读并同意</string>
    <string name="register_agreement">《用户协议》</string>

    <string name="forgot_phone">请输入手机号码</string>
    <string name="forgot_validation">验证码</string>
    <string name="forgot_password">请输入密码</string>
    <string name="forgot_repeat_password">请再次输入密码</string>
    <string name="forgot_determine_password">确定密码</string>
    <string name="forgot_reset_password">重置密码</string>

    <string name="register_stores_info">门店信息</string>
    <string name="register_stores_name">门店名称</string>
    <string name="register_stores_name_hint">请输入门店名称，不大于8个字</string>
    <string name="register_stores_logo">门店LOGO</string>
    <string name="register_stores_location">门店位置</string>
    <string name="register_stores_location_hint">选择门店位置</string>
    <string name="register_stores_address">详细地址</string>
    <string name="register_stores_address_hint">请输入门店详细地址</string>
    <string name="register_stores_introduce">门店介绍</string>
    <string name="register_stores_introduce_hint">请输入门店介绍，至少输入10个字符，最多可能输入200个字符</string>
    <string name="register_stores_qualification_info">资质信息</string>
    <string name="register_stores_type">申请类型</string>
    <string name="register_stores_type_hint">请选择申请类型</string>
    <string name="register_stores_head_name">负责人姓名</string>
    <string name="register_stores_head_name_hint">请输入负责人姓名</string>
    <string name="register_stores_head_number">负责人身份证号</string>
    <string name="register_stores_head_number_hint">请输入负责人身份证号码</string>
    <string name="register_stores_number_picture_1">上传人像页</string>
    <string name="register_stores_number_picture_2">上传国徽页</string>
    <string name="register_stores_code">社会统一信用代码</string>
    <string name="register_stores_picture">营业执照图片</string>
    <string name="register_stores_apply">申请门店</string>

    <string name="stores_info_name">门店名称</string>
    <string name="stores_info_logo">门店LOGO</string>
    <string name="stores_info_location">门店位置</string>
    <string name="stores_info_address">门店地址</string>
    <string name="stores_info_introduce">门店介绍</string>
    <string name="stores_info_bg">门店背景图</string>
    <string name="stores_info_phone">门店热线</string>
    <string name="stores_info_pwd">登录密码</string>

    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="add">新增</string>
    <string name="save">保存</string>
    <string name="input">请输入</string>
    <string name="select">请选择</string>
    <string name="money_sign">¥</string>
    <string name="submit">提交</string>
    <string name="complete">完成</string>

    <string name="search_for_keywords">请输入搜索关键字</string>
    <string name="withdrawal">提现</string>
    <string name="withdrawal_to_pay_treasure">提现至支付宝</string>
    <string name="withdrawal_all">全部提现</string>
    <string name="withdrawal_the_amount_of">提现金额(元)</string>
    <string name="alipay_account">请输入支付宝账号</string>
    <string name="withdrawal_prompt">提现金额将在1-3个工作日内到账，请注意查收。</string>


    <string name="coach_add_name">姓名</string>
    <string name="coach_add_logo">头像</string>
    <string name="coach_add_info">教练简介</string>
    <string name="coach_add_label">教练标签</string>
    <string name="coach_add_video">教练视频</string>
    <string name="coach_add_phone">教练手机号码</string>
    <string name="coach_add_pwd">密码</string>
    <string name="coach_add_state">状态</string>
    <string name="coach_label_title">选择适合你的标签</string>
    <string name="coach_label_hint">请设置6个最符合的标签</string>
    <string name="coach_label_add">+自定义添加</string>
    <string name="coach_label_into_hint">请输入你想添加的的教练标签</string>

    <string name="course_name">课程名称</string>
    <string name="course_phone">用户手机号码</string>
    <string name="course_type">使用类型</string>
    <string name="course_effective_period">有效期</string>
    <string name="course_day">天</string>
    <string name="course_select">请选择></string>
    <string name="course_number">课程次数</string>
    <string name="course_time">次</string>
    <string name="course_giving">赠送</string>

    <string name="course_package">新增课程包</string>
    <string name="course_giving_package">赠送课程包</string>

    <string name="course__package_name">课程包名</string>
    <string name="course_yuan">元</string>
    <string name="course_the_price">课程包价格</string>
    <string name="course_new">新增</string>


    <string name="financial_the_balance">账户余额(元)</string>

    <string name="event_logo">赛事海报图</string>
    <string name="event_name">赛事名称</string>
    <string name="event_input">请填写</string>
    <string name="event_time">比赛时间</string>
    <string name="event_finish_time">比赛结束时间</string>
    <string name="event_start_time">报名开始时间</string>
    <string name="event_end_time">报名截止时间</string>
    <string name="event_info">赛事介绍</string>
    <string name="event_address">赛事区域</string>
    <string name="event_number">人员数量展示</string>
    <string name="event_results">赛事成绩</string>
    <string name="event_arrange">赛事安排</string>
    <string name="event_setup">赛事设置</string>
    <string name="event_setup_hint">请进行设置</string>
    <string name="event_setup_add">新增类型</string>
    <string name="event_setup_type_name">名称</string>
    <string name="event_setup_type_number">人数(人)</string>
    <string name="event_setup_type_price">报名费用(元)</string>
    <string name="event_setup_type_age_max">最大年龄(岁)</string>
    <string name="event_setup_type_age_min">最小年龄(岁)</string>
    <string name="event_cancel_cause">取消原因</string>
    <string name="event_cancel_cause_hint">请填写10个字以上的问题描述</string>
    <string name="event_cancel_submit">提交申请</string>


    <string name="event_sign_up_type">报名类型</string>
    <string name="event_sign_up_user">报名用户</string>
    <string name="event_user_nickname">用户昵称</string>
    <string name="event_child_name">孩子姓名</string>
    <string name="event_child_gender">孩子性别</string>
    <string name="event_child_age">孩子年龄</string>
    <string name="event_male">男</string>
    <string name="event_phone">手机号码</string>
    <string name="event_note">备注信息</string>
    <string name="event_competition">参加少年组比赛</string>
    <string name="event_clothes_size">衣服大小</string>
    <string name="event_clothes_color">衣服颜色</string>
    <string name="event_code">S码</string>
    <string name="event_yellow">黄色</string>
    <string name="event_black">黑色</string>
    <string name="event_game_certification">比赛认证</string>
    <string name="event_sign_certification">签到认证</string>

    <string name="event_arrange_add">新增规则安排</string>
    <string name="event_arrange_type">报名类型</string>
    <string name="event_arrange_name">场次名称</string>
    <string name="event_arrange_places">优胜名额</string>
    <string name="event_arrange_time">比赛时间</string>
    <string name="event_arrange_time_1">检录时间</string>
    <string name="event_arrange_promotion">是否进阶</string>
    <string name="event_arrange_number">进阶场次</string>
    <string name="event_arrange_equipment">物联设备</string>
    <string name="event_arrange_personnel">场次人员</string>
    <string name="event_add">添加</string>

    <string name="set_up_message">消息免打扰</string>
    <string name="set_up_feedback">意见反馈</string>
    <string name="set_up_problem">常见问题</string>
    <string name="set_up_about">关于我们</string>
    <string name="set_up_log_out">退出登录</string>

    <string name="set_up_feedback_content">反馈内容</string>
    <string name="srt_up_submit_feedback">提交反馈</string>
    <string name="set_up_feedback_describe">请填写10个字以上的问题描述</string>

    <string name="set_up_common_delete">收藏的内容如何删除</string>
    <string name="set_up_common_restore">已删除信息可以恢复吗</string>
    <string name="set_up_common_reset">如何重置密码</string>
    <string name="set_up_common_notice">如何开启或关闭新消息通知</string>
    <string name="set_up_common_switch">如何切换账号</string>

    <string name="set_up_details_withdrawal">如何提现</string>
    <string name="set_up_details_prompt">1.账户要有余额</string>
    <string name="set_up_details_prompt1">2.具体操作如下</string>
    <string name="set_uo_adoutus_version">当前版本 1.0.2</string>

</resources>
