<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".module.stores.WithdrawalActivity">

    <com.xian.scooter.utils.TitleBarView
        android:id="@+id/title_bar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_marginTop="20dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_33"
        android:textSize="@dimen/sp_14"
        android:text="@string/withdrawal_to_pay_treasure"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:hint="@string/alipay_account"/>
</LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_33"
        android:textSize="@dimen/sp_14"
        android:text="@string/withdrawal_the_amount_of"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textColor="@color/black_33"
        android:text="@string/withdrawal_all"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_33"
            android:textSize="32sp"
            android:text="￥"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:hint=""/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/withdrawal_prompt"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:paddingLeft="125dp"
        android:paddingRight="125dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:background="@drawable/horn_theme_20dp"
        android:text="@string/withdrawal"
        android:textColor="@color/white"
        android:layout_gravity="center"/>
</LinearLayout>
</LinearLayout>